<resources>
    <string name="app_name">Reactive Binding Demo</string>

    <string name="ui_title_registration_form">Registration Form</string>

    <string name="ui_label_name">Name</string>
    <string name="ui_label_email">E-mail</string>
    <string name="ui_label_password">Password</string>
    <string name="ui_label_password_confirm">Confirm Password</string>
    <string name="ui_label_gender">Gender</string>
    <string name="ui_label_gender_male">Male</string>
    <string name="ui_label_gender_female">Female</string>
    <string name="ui_label_education">Education</string>
    <string name="ui_label_agree">I agree that the information above will not be submitted</string>
    <string name="ui_label_submit">Submit</string>
    <string name="ui_label_reset">Reset</string>

    <string name="ui_toast_saved">Registration data saved</string>
    <string name="ui_toast_reset">Registration data reset</string>
    <string name="ui_error_email_empty">E-mail is required</string>
    <string name="ui_error_email_invalid">Invalid e-mail</string>
    <string name="ui_error_password_empty">Password is required</string>
    <string name="ui_error_password_confirm">Password confirmation doesn\'t match</string>
    <string name="ui_error_name_empty">Name is required</string>
</resources>
